# ProdutorConsumidor

./: .gitignore  CMakeLists.txt  README.md  config.sh  initMatrix.sh  run.sh
src/: constants.h  io.c  io.h  main.c  matrix.c  matrix.h  matrixGenerator.py  semaphore.h
